fixin navbar overflow

--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
     box-sizing: border-box;
 }
 body{
-    width: 100%;
+    width: 100vw;
+    height: auto;
+    overflow-x: hidden;
+    position: relative;
 }
 a{
     text-decoration: none;
@@ -54,7 +57,8 @@ header{
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    margin-right: 75px; 
+    margin-right: 75px;
+    z-index: 1;
 }
 .navbar a{
     color: hsl(238, 22%, 44%);
@@ -96,7 +100,7 @@ header{
 .hero-img{
     transform: translateX(400px);
     opacity: 0;
-    transition: 1s ease-out;
+    transition: 1s ease;
 }
 .hero-img-load{
     transform: translate(0);
@@ -269,14 +273,11 @@ footer a{
         text-align: left;
         width: 100%;
     }
-    .card img{
-        
-    }
     .section-2-link{
         margin: auto;
     }
     .bg-curve{
-        margin-bottom: -6px;
+        margin-bottom: -5px;
     }
     .section-3 form input{
         width: 100%;
@@ -297,10 +298,8 @@ footer a{
         justify-items: center;
     }
 }
-@media(max-width: 500px){
-    body{
-        overflow-x: hidden;
-    }
+@media(max-width: 450px){
+    
     .brand-logo{
         margin:0;
     }
